--- a/stories.html
+++ b/stories.html
@@ -60,7 +60,7 @@
 				<div class="header__wrap">
 					<div class="header__left">
 						<div class="header__logo">
-							<div class="header__logo-pic"><img src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-19/s150x150/76875187_439920826914475_1495386447144812544_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_ohc=jf_MPYf9MokAX9SXzBb&oh=900cd409f2e301c780e65d68ae026d8a&oe=5EFF07CC" alt="😁 Арманшыл Саят" /></div>
+							<div class="header__logo-pic"><img src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-19/s150x150/76875187_439920826914475_1495386447144812544_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_ohc=hLbX0JVapPwAX8pX2Qv&oh=7ce27f05e0a7b1b0841cb9073407563c&oe=5EFF07CC" alt="😁 Арманшыл Саят" /></div>
 							<div class="header__logo-txt">sayatahmethan_</div>
 						</div>
 						<div class="header__title">😁 Арманшыл Саят</div>
@@ -105,6 +105,16 @@
 				<div class="items-main" id="js-items-main">
 					<div class="items-item">
 						<label class="items-item__wrap items-item__check">
+							<input id="xx-өz-өmіrіңdі-қiyndatpa" type="checkbox" />
+							<div class="items-item__pic">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/81327250_1101761173508482_7031988878103105573_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=110&_nc_ohc=AmlAUMd5dL4AX8bNDBk&oh=ed1f5100fce5ef9300b701058a51b8e6&oe=5ECA9B8E" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="😏 Өз өміріңді қиындатпа!">
+								<ul class="items-item__taglist">
+								</ul>
+							</div>
+						</label>
+					</div>
+					<div class="items-item">
+						<label class="items-item__wrap items-item__check">
 							<input id="xx-zharnama-zhіbermey-xx-tap" type="checkbox" />
 							<div class="items-item__pic">
 								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/82491276_594100181151505_1238381754611812493_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=101&_nc_ohc=ByfS-AcLDF4AX9m4pTW&oh=a95b03fdb70584adef0d8a8693e0d2bf&oe=5EC3203E" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="😮 Жарнама жібермей 🍋 тап!">
@@ -137,7 +147,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="xxmen-өmіrge-ne-үshіn-keldіm" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/84029257_650884998982587_8857777222872158278_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=103&_nc_ohc=LGa78ITKS-0AX_UV6hO&oh=262b7b0b98d9a0dd5b677fe91989ac1d&oe=5EC0066A" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="🧐Мен өмірге не үшін келдім?">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/84029257_650884998982587_8857777222872158278_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=103&_nc_ohc=OgESWQ5l9TYAX-kDCr6&oh=b7436bcd1565cdc2ad9aebdbf0971baa&oe=5EC0066A" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="🧐Мен өмірге не үшін келдім?">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -147,7 +157,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="xx-қayyrly-kүn-қalayyқx-mұnda" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/82234340_108761900658007_8952337626418518331_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=107&_nc_ohc=G9E63LlbfVsAX83aeF5&oh=03dec011778d57d330c2424be371ed0b&oe=5EC50B1F" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="👋 Қайырлы күн Қалайық, Мұнда">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/82234340_108761900658007_8952337626418518331_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=107&_nc_ohc=mui8t2trO0wAX9bW99l&oh=86900896632bf0d6740b6604c90c7080&oe=5EC50B1F" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="👋 Қайырлы күн Қалайық, Мұнда">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -167,7 +177,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="al-mіne-tegіn-үyren-de-basta" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/73387385_2628140830557121_864822904081207135_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=101&_nc_ohc=5ujLh-7_bpoAX-1Mntt&oh=c88d46cb612875db538d4b5dd905b41e&oe=5E483ED2" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="Ал міне тегін үйрен де Баста!">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/73387385_2628140830557121_864822904081207135_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=101&_nc_ohc=5ujLh-7_bpoAX-1Mntt&oh=d1e934befe150d85dba8110582e45425&oe=5E4A3912" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="Ал міне тегін үйрен де Баста!">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -177,7 +187,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="arman---maқsat---іs--әreket--" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-15/e35/75284446_193327011825233_3477503653942516291_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_cat=105&_nc_ohc=f-pwEWWvMjEAX9Fnkgc&oh=4dddfa3cfb2df6abdfe82703c98c2c0a&oe=5F0137D7" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="АРМАН-> МАҚСАТ-> ІС- ӘРЕКЕТ->">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-15/e35/75284446_193327011825233_3477503653942516291_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_cat=105&_nc_ohc=n_102tAAOOgAX_3_5PQ&oh=d966cf5da334977a462567c4e1565c9b&oe=5F0137D7" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="АРМАН-> МАҚСАТ-> ІС- ӘРЕКЕТ->">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -187,7 +197,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="xx-post-saluғa-uaқyt-zhoқ" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/77401446_778145799273103_7373557858853546984_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=107&_nc_ohc=ExrlNSzG_2MAX-GI7cH&oh=fe1e1b6e5b04707dd85e92a6c4233737&oe=5ED1BA3C" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="⚠️ Пост салуға уақыт жоқ!">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/77401446_778145799273103_7373557858853546984_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=107&_nc_ohc=gSlwWbAmaxQAX8VLugJ&oh=d5791157da2da1fe82b9797e6fbc680a&oe=5ED1BA3C" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="⚠️ Пост салуға уақыт жоқ!">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -197,7 +207,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="zhaңalyқtyң-kөkesіx-tөmengі" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/75586246_166073588054248_6776733106266702904_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=104&_nc_ohc=Bier_ppEPjYAX81EjR4&oh=8f50f4d4d16ed8457df471ac18e6f9ba&oe=5ED0C768" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="Жаңалықтың көкесі, төменгі">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/75586246_166073588054248_6776733106266702904_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=104&_nc_ohc=271TwRaBvSYAX-lCja_&oh=c335c87bb271925792a3d901350be6db&oe=5ED0C768" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="Жаңалықтың көкесі, төменгі">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -217,7 +227,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="xxүy-satudyң-3x2-құpiyasy" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/71851985_408537836745398_1783606332378097787_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=102&_nc_ohc=oyA0BUO6S0IAX8GWVxG&oh=d244b879eb3a3f14cb8ecd26498ffe8f&oe=5F022A2E" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="☝️Үй сатудың 3/2 құпиясы">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/71851985_408537836745398_1783606332378097787_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=102&_nc_ohc=2PTJso13-R4AX8o1Y7J&oh=2979ae3cb667b3330684447dad6c8dc3&oe=5F022A2E" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="☝️Үй сатудың 3/2 құпиясы">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -237,7 +247,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="xx-biznesmenge-kerektі-bіlіm" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/71187969_442627039709879_197456136209767097_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=111&_nc_ohc=8LPstUrBBc4AX_iNF-V&oh=e6fe949302441ee5559ad06d13e300a4&oe=5EDD582D" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="📚 Бизнесменге керекті білім">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/71187969_442627039709879_197456136209767097_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=111&_nc_ohc=FSe0Vp8Why8AX_-lAAX&oh=c5e90ad1fa4675597bc2c59c23614d6e&oe=5EDD582D" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="📚 Бизнесменге керекті білім">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -257,7 +267,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="xxxxx-men-өz-өmіrіmnің-egesіmіn" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/72610312_159173698509403_8484063782006537168_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=107&_nc_ohc=99xKI21jqlkAX9H-arG&oh=3d1620c591f83c802f4dbdaf1d588794&oe=5EFFFCAC" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="🦸‍♂️ Мен өз өмірімнің егесімін">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/72610312_159173698509403_8484063782006537168_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=107&_nc_ohc=JseWfw8QhbkAX_LFlzl&oh=d6d8a8d41a1d8c1cc96f564ec14a64d2&oe=5EFFFCAC" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="🦸‍♂️ Мен өз өмірімнің егесімін">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -267,17 +277,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="xx-men-18-toldymx-allaғa-shүkіr" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-15/e35/69959252_388029788512356_2966149528030807823_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_cat=100&_nc_ohc=i3CAUmyv7TkAX95sEXe&oh=6b12aebfb5d38ca65f93ec19d63958e3&oe=5ED365E4" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="😃 Мен 18 толдым, Аллаға шүкір">
-								<ul class="items-item__taglist">
-								</ul>
-							</div>
-						</label>
-					</div>
-					<div class="items-item">
-						<label class="items-item__wrap items-item__check">
-							<input id="bұl-menің-17-zhasymdaғy-eң-soңғy" type="checkbox" />
-							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/70520693_160429371700250_8939151866088050391_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=102&_nc_ohc=L4msXOpFyREAX_FfV1-&oh=18d0d42f250e341f7d0a8cead3d54e76&oe=5ED2464D" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="Бұл менің 17 жасымдағы ең соңғы">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-15/e35/69959252_388029788512356_2966149528030807823_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_cat=100&_nc_ohc=BwTd-nZgx1IAX_uZC1q&oh=d9e12f9ef22c619e6a6fdf7e856fd4b9&oe=5EFAF2E4" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="😃 Мен 18 толдым, Аллаға шүкір">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
