--- a/links.html
+++ b/links.html
@@ -150,6 +150,15 @@
 								</div>
 							</div>
 							<div class="swiper-slide">
+								<div class="stories__slide" title="likekaz31">
+									<a href="./tags/./likekaz31.html">
+										<div class="stories__slide-pic" style="background-image: url(./img/og/likekaz31.png);"></div>
+										<div class="stories__slide-txt" style="		color: #243154;
+">likekaz31</div>
+									</a>
+								</div>
+							</div>
+							<div class="swiper-slide">
 								<div class="stories__slide" title="llәрқaшaнkүлiмдeпжүр">
 									<a href="./tags/./llәrқashankүlimdepzhүr.html">
 										<div class="stories__slide-pic" style="background-image: url(./img/og/llәrқashankүlimdepzhүr.png);"></div>
@@ -407,7 +416,7 @@ color: #C6BB73;
 										<div class="article-more__item-pic-blind">
 											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>169</span>
 										</div>
-										<img class="js-now-lazy" src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-15/e35/82697574_2488574724803465_3332618556511582612_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_cat=105&_nc_ohc=khPVw519qLoAX-fEfnk&oh=92fecdc189907df1b34a95aaa7cd764e&oe=5EFD6871" alt="💰 Жарнама жібермей 🍋 тап!">
+										<img class="js-now-lazy" src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-15/e35/82697574_2488574724803465_3332618556511582612_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_cat=105&_nc_ohc=PCZMe3XsMnYAX-YkIWC&oh=54f421b6e66ac39cb0bd2d423d6354c5&oe=5EFD6871" alt="💰 Жарнама жібермей 🍋 тап!">
 									</div>
 									<div class="article-more__item-name" style="
 		color: #243154;
@@ -429,11 +438,22 @@ color: #C6BB73;
 										<div class="article-more__item-pic-blind">
 											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>158</span>
 										</div>
-										<img class="js-now-lazy" src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/78813973_817282122053881_3899741372767422860_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=101&_nc_ohc=C8-_E11d4JwAX-YisMr&oh=e054358821868c6a060c289951a2fea3&oe=5EE2C7F6" alt="😊 «2020» жылы жеткен жетістіктерім">
+										<img class="js-now-lazy" src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/78813973_817282122053881_3899741372767422860_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=101&_nc_ohc=zLsTKx6gLRQAX9Xh8AA&oh=2b60e7af8ec6628f2ccf1db6b9182484&oe=5EE2C7F6" alt="😊 «2020» жылы жеткен жетістіктерім">
 									</div>
 									<div class="article-more__item-name" style="
 		color: #243154;
 ">😊 «2020» жылы жеткен жетістіктерім</div>
+								</a>
+								<a href="./posts/./xx-өz-өmіrіңdі-қiyndatpa.html" class="article-more__item">
+									<div class="article-more__item-pic">
+										<div class="article-more__item-pic-blind">
+											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>155</span>
+										</div>
+										<img class="js-now-lazy" src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/81327250_1101761173508482_7031988878103105573_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=110&_nc_ohc=AmlAUMd5dL4AX8bNDBk&oh=ed1f5100fce5ef9300b701058a51b8e6&oe=5ECA9B8E" alt="😏 Өз өміріңді қиындатпа!">
+									</div>
+									<div class="article-more__item-name" style="
+		color: #243154;
+">😏 Өз өміріңді қиындатпа!</div>
 								</a>
 								<a href="./posts/./arman---maқsat---іs--әreket--.html" class="article-more__item">
 									<div class="article-more__item-pic">
@@ -451,7 +471,7 @@ color: #C6BB73;
 										<div class="article-more__item-pic-blind">
 											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>148</span>
 										</div>
-										<img class="js-now-lazy" src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/77401446_778145799273103_7373557858853546984_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=107&_nc_ohc=gSlwWbAmaxQAX8VLugJ&oh=d5791157da2da1fe82b9797e6fbc680a&oe=5ED1BA3C" alt="⚠️ Пост салуға уақыт жоқ!">
+										<img class="js-now-lazy" src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/77401446_778145799273103_7373557858853546984_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=107&_nc_ohc=gSlwWbAmaxQAX8VLugJ&oh=474deb70f0406ca9976142784f46a06e&oe=5EF9473C" alt="⚠️ Пост салуға уақыт жоқ!">
 									</div>
 									<div class="article-more__item-name" style="
 		color: #243154;
@@ -467,17 +487,6 @@ color: #C6BB73;
 									<div class="article-more__item-name" style="
 		color: #243154;
 ">🤑 Жарнама жібермей 🍋 тап!</div>
-								</a>
-								<a href="./posts/./xx-қayyrly-kүn-қalayyқx-mұnda.html" class="article-more__item">
-									<div class="article-more__item-pic">
-										<div class="article-more__item-pic-blind">
-											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>138</span>
-										</div>
-										<img class="js-now-lazy" src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/82234340_108761900658007_8952337626418518331_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=107&_nc_ohc=mui8t2trO0wAX9bW99l&oh=86900896632bf0d6740b6604c90c7080&oe=5EC50B1F" alt="👋 Қайырлы күн Қалайық, Мұнда">
-									</div>
-									<div class="article-more__item-name" style="
-		color: #243154;
-">👋 Қайырлы күн Қалайық, Мұнда</div>
 								</a>
 							</div>
 						</div>
