--- a/error.html
+++ b/error.html
@@ -106,21 +106,12 @@
 							</div>
 							<div class="article-more__item-name">💰 Жарнама жібермей 🍋 тап!</div>
 						</a>
-							<a href="./posts/./x-үy-satudaғy-3x3-құpiyasy.html" class="article-more__item">
-							<div class="article-more__item-pic">
-								<div class="article-more__item-pic-blind">
-									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>174</span>
-								</div>
-								<img src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/75148256_157308765365063_6723412256602712267_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=111&_nc_ohc=PmDTB2UUekwAX-HfxSg&oh=1304162efff904985c9447030afc3909&oe=5E84F2EA" alt="✊ Үй сатудағы 3/3 құпиясы">
-							</div>
-							<div class="article-more__item-name">✊ Үй сатудағы 3/3 құпиясы</div>
-						</a>
 							<a href="./posts/./zhaңalyқtyң-kөkesіx-tөmengі.html" class="article-more__item">
 							<div class="article-more__item-pic">
 								<div class="article-more__item-pic-blind">
 									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>169</span>
 								</div>
-								<img src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/75586246_166073588054248_6776733106266702904_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=104&_nc_ohc=bf-QTAsWcGgAX_ZsDGw&oh=bdf333213cf792c57e109bd0d6becaac&oe=5E81AD68" alt="Жаңалықтың көкесі, төменгі">
+								<img src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/75586246_166073588054248_6776733106266702904_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=104&_nc_ohc=56Cre_bpcfgAX_xDReb&oh=fc30228180905e945c9d5907cd637f0f&oe=5E81AD68" alt="Жаңалықтың көкесі, төменгі">
 							</div>
 							<div class="article-more__item-name">Жаңалықтың көкесі, төменгі</div>
 						</a>
@@ -138,7 +129,7 @@
 								<div class="article-more__item-pic-blind">
 									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>156</span>
 								</div>
-								<img src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-15/e35/75284446_193327011825233_3477503653942516291_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_cat=105&_nc_ohc=QJMpqCH31zoAX_A6rnS&oh=6effac392515eebebb39bef0ccfab17e&oe=5E8A90D7" alt="АРМАН-> МАҚСАТ-> ІС- ӘРЕКЕТ->">
+								<img src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-15/e35/75284446_193327011825233_3477503653942516291_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_cat=105&_nc_ohc=sOS7dU69_dYAX9DsmzX&oh=1ba91741bd1ab115335a006aeae2e72d&oe=5E8A90D7" alt="АРМАН-> МАҚСАТ-> ІС- ӘРЕКЕТ->">
 							</div>
 							<div class="article-more__item-name">АРМАН-> МАҚСАТ-> ІС- ӘРЕКЕТ-></div>
 						</a>
@@ -147,7 +138,7 @@
 								<div class="article-more__item-pic-blind">
 									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>149</span>
 								</div>
-								<img src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/77401446_778145799273103_7373557858853546984_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=107&_nc_ohc=DopiuTSB8w4AX-Ltcz9&oh=c3dd8c39878f229c835f89e27cde61bb&oe=5E82A03C" alt="⚠️ Пост салуға уақыт жоқ!">
+								<img src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/77401446_778145799273103_7373557858853546984_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=107&_nc_ohc=UAkJVnoTeZAAX82puQ9&oh=e439ff146907bc4347cbec26a398f239&oe=5E82A03C" alt="⚠️ Пост салуға уақыт жоқ!">
 							</div>
 							<div class="article-more__item-name">⚠️ Пост салуға уақыт жоқ!</div>
 						</a>
@@ -159,6 +150,15 @@
 								<img src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/82344041_472286830346589_2121484091507824806_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=109&_nc_ohc=4AACaA9HIe4AX_2rP_n&oh=d417f7657e4a34dad2193579884c2e44&oe=5E80AD81" alt="🤑 Жарнама жібермей 🍋 тап!">
 							</div>
 							<div class="article-more__item-name">🤑 Жарнама жібермей 🍋 тап!</div>
+						</a>
+							<a href="./posts/./xx-қayyrly-kүn-қalayyқx-mұnda.html" class="article-more__item">
+							<div class="article-more__item-pic">
+								<div class="article-more__item-pic-blind">
+									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>141</span>
+								</div>
+								<img src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/82234340_108761900658007_8952337626418518331_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=107&_nc_ohc=F6jCYqgyWhUAX_5AaNl&oh=4a57a9662896783d11fd4ceaf797d23c&oe=5E83201F" alt="👋 Қайырлы күн Қалайық, Мұнда">
+							</div>
+							<div class="article-more__item-name">👋 Қайырлы күн Қалайық, Мұнда</div>
 						</a>
 						</div>
 				</div>
