--- a/error.html
+++ b/error.html
@@ -106,15 +106,6 @@
 							</div>
 							<div class="article-more__item-name">💰 Жарнама жібермей 🍋 тап!</div>
 						</a>
-							<a href="./posts/./zhaңalyқtyң-kөkesіx-tөmengі.html" class="article-more__item">
-							<div class="article-more__item-pic">
-								<div class="article-more__item-pic-blind">
-									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>171</span>
-								</div>
-								<img src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/75586246_166073588054248_6776733106266702904_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=104&_nc_ohc=ykcxGYfD824AX_mTa30&oh=a0f869e9857ad9f2a11d443cb582da74&oe=5E8EDC68" alt="Жаңалықтың көкесі, төменгі">
-							</div>
-							<div class="article-more__item-name">Жаңалықтың көкесі, төменгі</div>
-						</a>
 							<a href="./posts/./xx-x2020x-zhyly-zhetken-zhetіstіkterіm.html" class="article-more__item">
 							<div class="article-more__item-pic">
 								<div class="article-more__item-pic-blind">
@@ -147,7 +138,7 @@
 								<div class="article-more__item-pic-blind">
 									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>146</span>
 								</div>
-								<img src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/82344041_472286830346589_2121484091507824806_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=109&_nc_ohc=LbSHsRNQOucAX_RgrAN&oh=82e554e0fa29b50322d83209310f5b53&oe=5E8DDC81" alt="🤑 Жарнама жібермей 🍋 тап!">
+								<img src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/82344041_472286830346589_2121484091507824806_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=109&_nc_ohc=mTDl0vecWBIAX8U81yo&oh=f14313fc67faa0d4ba124d0d8f5036fb&oe=5E8DDC81" alt="🤑 Жарнама жібермей 🍋 тап!">
 							</div>
 							<div class="article-more__item-name">🤑 Жарнама жібермей 🍋 тап!</div>
 						</a>
@@ -159,6 +150,15 @@
 								<img src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/82234340_108761900658007_8952337626418518331_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=107&_nc_ohc=Gnl0ZZ1X99AAX8CA5-W&oh=bd0ff3447aa0f7b8c10e369be1cf4c68&oe=5E904F1F" alt="👋 Қайырлы күн Қалайық, Мұнда">
 							</div>
 							<div class="article-more__item-name">👋 Қайырлы күн Қалайық, Мұнда</div>
+						</a>
+							<a href="./posts/./xx-zharnama-zhіbermey-xx-tap.html" class="article-more__item">
+							<div class="article-more__item-pic">
+								<div class="article-more__item-pic-blind">
+									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>142</span>
+								</div>
+								<img src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/82491276_594100181151505_1238381754611812493_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=101&_nc_ohc=6OYpVnRJ3XgAX8y0vh8&oh=6cee64b3244b37b45e65fb1657de6305&oe=5E8E643E" alt="😮 Жарнама жібермей 🍋 тап!">
+							</div>
+							<div class="article-more__item-name">😮 Жарнама жібермей 🍋 тап!</div>
 						</a>
 						</div>
 				</div>
