--- a/links.html
+++ b/links.html
@@ -9,8 +9,8 @@
     <script async src="https://use.fontawesome.com/d758daec41.js"></script>   
 	<link rel="stylesheet" href="css/style.css"/>
     
-    <meta name="description" content="құпия үйсату бб команда суперсаят сұрақ баста крыша білім сыйлық ктlike">
-    <meta name="keywords" content="құпия үйсату бб команда суперсаят сұрақ баста крыша білім сыйлық ктlike" />
+    <meta name="description" content="құпия үйсату сұрақ баста крыша білім сыйлық ктlike бизnes ktклуб">
+    <meta name="keywords" content="құпия үйсату сұрақ баста крыша білім сыйлық ктlike бизnes ktклуб" />
     
     <link rel="apple-touch-icon" sizes="57x57" href="img/favicon/apple-icon-57x57.png">
     <link rel="apple-touch-icon" sizes="60x60" href="img/favicon/apple-icon-60x60.png">
@@ -39,7 +39,7 @@
     <meta property="og:image:width" content="150"/>
     <meta property="og:image:height" content="150"/>
     <meta property="og:title" content="😁 Арманшыл Саят" />
-    <meta property="og:description" content="құпия үйсату бб команда суперсаят сұрақ баста крыша білім сыйлық ктlike" />
+    <meta property="og:description" content="құпия үйсату сұрақ баста крыша білім сыйлық ктlike бизnes ktклуб" />
     <meta property="og:locale" content="Ru-ru" />
     <meta property="og:site_name" content="sayatahmethan_" />
 
@@ -101,24 +101,6 @@
 										<div class="stories__slide-pic" style="background-image: url(./img/og/үysatu.png);"></div>
 										<div class="stories__slide-txt" style="		color: #243154;
 ">үйсату</div>
-									</a>
-								</div>
-							</div>
-							<div class="swiper-slide">
-								<div class="stories__slide" title="бб команда">
-									<a href="./tags/./bb-komanda.html">
-										<div class="stories__slide-pic" style="background-image: url(./img/og/bb-komanda.png);"></div>
-										<div class="stories__slide-txt" style="		color: #243154;
-">бб команда</div>
-									</a>
-								</div>
-							</div>
-							<div class="swiper-slide">
-								<div class="stories__slide" title="суперсаят">
-									<a href="./tags/./supersayat.html">
-										<div class="stories__slide-pic" style="background-image: url(./img/og/supersayat.png);"></div>
-										<div class="stories__slide-txt" style="		color: #243154;
-">суперсаят</div>
 									</a>
 								</div>
 							</div>
@@ -285,20 +267,20 @@
 								</div>
 							</div>
 							<div class="swiper-slide">
-								<div class="stories__slide" title="команда">
-									<a href="./tags/./komanda.html">
-										<div class="stories__slide-pic" style="background-image: url(./img/og/komanda.png);"></div>
+								<div class="stories__slide" title="бб команда">
+									<a href="./tags/./bb-komanda.html">
+										<div class="stories__slide-pic" style="background-image: url(./img/og/bb-komanda.png);"></div>
 										<div class="stories__slide-txt" style="		color: #243154;
-">команда</div>
+">бб команда</div>
 									</a>
 								</div>
 							</div>
 							<div class="swiper-slide">
-								<div class="stories__slide" title="ойтолғам">
-									<a href="./tags/./oytolғam.html">
-										<div class="stories__slide-pic" style="background-image: url(./img/og/oytolғam.png);"></div>
+								<div class="stories__slide" title="суперсаят">
+									<a href="./tags/./supersayat.html">
+										<div class="stories__slide-pic" style="background-image: url(./img/og/supersayat.png);"></div>
 										<div class="stories__slide-txt" style="		color: #243154;
-">ойтолғам</div>
+">суперсаят</div>
 									</a>
 								</div>
 							</div>
@@ -326,15 +308,6 @@
 										<div class="stories__slide-pic" style="background-image: url(./img/og/dekompozitsiya.png);"></div>
 										<div class="stories__slide-txt" style="		color: #243154;
 ">декомпозиция</div>
-									</a>
-								</div>
-							</div>
-							<div class="swiper-slide">
-								<div class="stories__slide" title="оқырманға сұрақ">
-									<a href="./tags/./oқyrmanғa-sұraқ.html">
-										<div class="stories__slide-pic" style="background-image: url(./img/og/oқyrmanғa-sұraқ.png);"></div>
-										<div class="stories__slide-txt" style="		color: #243154;
-">оқырманға сұрақ</div>
 									</a>
 								</div>
 							</div>
@@ -449,17 +422,6 @@ color: #C6BB73;
 		color: #243154;
 ">💰 Жарнама жібермей 🍋 тап!</div>
 								</a>
-								<a href="./posts/./zhaңalyқtyң-kөkesіx-tөmengі.html" class="article-more__item">
-									<div class="article-more__item-pic">
-										<div class="article-more__item-pic-blind">
-											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>171</span>
-										</div>
-										<img class="js-now-lazy" src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/75586246_166073588054248_6776733106266702904_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=104&_nc_ohc=ykcxGYfD824AX_mTa30&oh=a0f869e9857ad9f2a11d443cb582da74&oe=5E8EDC68" alt="Жаңалықтың көкесі, төменгі">
-									</div>
-									<div class="article-more__item-name" style="
-		color: #243154;
-">Жаңалықтың көкесі, төменгі</div>
-								</a>
 								<a href="./posts/./xx-x2020x-zhyly-zhetken-zhetіstіkterіm.html" class="article-more__item">
 									<div class="article-more__item-pic">
 										<div class="article-more__item-pic-blind">
@@ -498,7 +460,7 @@ color: #C6BB73;
 										<div class="article-more__item-pic-blind">
 											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>146</span>
 										</div>
-										<img class="js-now-lazy" src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/82344041_472286830346589_2121484091507824806_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=109&_nc_ohc=LbSHsRNQOucAX_RgrAN&oh=82e554e0fa29b50322d83209310f5b53&oe=5E8DDC81" alt="🤑 Жарнама жібермей 🍋 тап!">
+										<img class="js-now-lazy" src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/82344041_472286830346589_2121484091507824806_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=109&_nc_ohc=mTDl0vecWBIAX8U81yo&oh=f14313fc67faa0d4ba124d0d8f5036fb&oe=5E8DDC81" alt="🤑 Жарнама жібермей 🍋 тап!">
 									</div>
 									<div class="article-more__item-name" style="
 		color: #243154;
@@ -514,6 +476,17 @@ color: #C6BB73;
 									<div class="article-more__item-name" style="
 		color: #243154;
 ">👋 Қайырлы күн Қалайық, Мұнда</div>
+								</a>
+								<a href="./posts/./xx-zharnama-zhіbermey-xx-tap.html" class="article-more__item">
+									<div class="article-more__item-pic">
+										<div class="article-more__item-pic-blind">
+											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>142</span>
+										</div>
+										<img class="js-now-lazy" src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/82491276_594100181151505_1238381754611812493_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=101&_nc_ohc=6OYpVnRJ3XgAX8y0vh8&oh=6cee64b3244b37b45e65fb1657de6305&oe=5E8E643E" alt="😮 Жарнама жібермей 🍋 тап!">
+									</div>
+									<div class="article-more__item-name" style="
+		color: #243154;
+">😮 Жарнама жібермей 🍋 тап!</div>
 								</a>
 							</div>
 						</div>
