--- a/stories.html
+++ b/stories.html
@@ -105,9 +105,19 @@
 				<div class="items-main" id="js-items-main">
 					<div class="items-item">
 						<label class="items-item__wrap items-item__check">
+							<input id="xxөzіңe-senіmsіzdіk-tanytsaң" type="checkbox" />
+							<div class="items-item__pic">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/84419609_660387121392825_6849093406712899036_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=109&_nc_ohc=fNYly3rTIpYAX8v9HBv&oh=31e4c5c9d98c348fa6861f5213edccf6&oe=5E8DA815" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="☝️Өзіңе сенімсіздік танытсаң">
+								<ul class="items-item__taglist">
+								</ul>
+							</div>
+						</label>
+					</div>
+					<div class="items-item">
+						<label class="items-item__wrap items-item__check">
 							<input id="xx-әtteң-osy-sұraқty-16mln" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/84057952_1473130616193499_2684157898017634379_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=107&_nc_ohc=EbWckfzasYoAX_dJBDL&oh=8d838ffc9fa74efca5ff60d7c32d8254&oe=5E9685A5" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="😬 Әттең осы сұрақты 16млн">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/84057952_1473130616193499_2684157898017634379_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=107&_nc_ohc=YU5PsEG13vkAX_1Pc9l&oh=6d9a8c4c831aeb32923e0ab631463aa9&oe=5E9685A5" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="😬 Әттең осы сұрақты 16млн">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -127,7 +137,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="xx-zharnama-zhіbermey-xx-tap" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/82491276_594100181151505_1238381754611812493_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=101&_nc_ohc=miYw__uXLAQAX_I1m5s&oh=ec871513f9626d3d15cb6e045e021b94&oe=5E8E643E" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="😮 Жарнама жібермей 🍋 тап!">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/82491276_594100181151505_1238381754611812493_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=101&_nc_ohc=6OYpVnRJ3XgAX8y0vh8&oh=6cee64b3244b37b45e65fb1657de6305&oe=5E8E643E" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="😮 Жарнама жібермей 🍋 тап!">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -147,7 +157,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="xx-zharnama-zhіbermey-xx-tap-2" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/82344041_472286830346589_2121484091507824806_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=109&_nc_ohc=LbSHsRNQOucAX_RgrAN&oh=82e554e0fa29b50322d83209310f5b53&oe=5E8DDC81" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="🤑 Жарнама жібермей 🍋 тап!">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/82344041_472286830346589_2121484091507824806_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=109&_nc_ohc=mTDl0vecWBIAX8U81yo&oh=f14313fc67faa0d4ba124d0d8f5036fb&oe=5E8DDC81" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="🤑 Жарнама жібермей 🍋 тап!">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -187,7 +197,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="al-mіne-tegіn-үyren-de-basta" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/73387385_2628140830557121_864822904081207135_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=101&_nc_ohc=Mszkd2cF6j0AX_Snm6z&oh=78f4d784ef92d4f788e6a8cfdb81a938&oe=5E629CD2" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="Ал міне тегін үйрен де Баста!">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/73387385_2628140830557121_864822904081207135_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=101&_nc_ohc=Mszkd2cF6j0AX_Snm6z&oh=136bde4dc94a2fb4c0217eb2fa446a29&oe=5E63EE52" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="Ал міне тегін үйрен де Баста!">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -227,7 +237,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="x-үy-satudaғy-3x3-құpiyasy" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/75148256_157308765365063_6723412256602712267_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=111&_nc_ohc=xJCNecFMF-AAX914RpF&oh=a7576a53c2a8c9f6dfb85d597be6a7f5&oe=5E9221EA" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="✊ Үй сатудағы 3/3 құпиясы">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/75148256_157308765365063_6723412256602712267_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=111&_nc_ohc=-lpp0GrH_D0AX8LAd4e&oh=d03fe1b987c110da01205b0ea81b2957&oe=5E9221EA" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="✊ Үй сатудағы 3/3 құпиясы">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -247,7 +257,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="xx-30-kүnde-үy-satudyң-3x1-құpiyasy" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/74385177_1591143844359853_3822974184782837967_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=101&_nc_ohc=qwYA4VJQLfIAX_4-OJN&oh=63715cb586e1a184322ae9b815b5c661&oe=5E98E027" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="😘 30 күнде үй сатудың 3/1 құпиясы">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/74385177_1591143844359853_3822974184782837967_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=101&_nc_ohc=iVzii8RDdOMAX_FtwGp&oh=3dc41f74e01e012b34db7f7844f630bf&oe=5E98E027" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="😘 30 күнде үй сатудың 3/1 құпиясы">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -267,17 +277,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="xx-biznesmenge-kerektі-bіlіm-1" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/70757859_107756260519312_5554991696883075902_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=104&_nc_ohc=Uk7CZF8HlYMAX_eskLK&oh=e7a34570936c1d7b46e0ea48d1cafd95&oe=5E93913C" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="📚 Бизнесменге керекті білім">
-								<ul class="items-item__taglist">
-								</ul>
-							</div>
-						</label>
-					</div>
-					<div class="items-item">
-						<label class="items-item__wrap items-item__check">
-							<input id="xxxxx-men-өz-өmіrіmnің-egesіmіn" type="checkbox" />
-							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/72610312_159173698509403_8484063782006537168_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=107&_nc_ohc=Kd7xy4dYuBQAX_ljCSw&oh=ae80e9cd3c6e89aa27d32ce6ebe887fe&oe=5E9684AC" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="🦸‍♂️ Мен өз өмірімнің егесімін">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/70757859_107756260519312_5554991696883075902_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=104&_nc_ohc=uLhsmowBEKkAX_XQccT&oh=73d1943ae1aa2e140944cc2d5690144e&oe=5E93913C" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="📚 Бизнесменге керекті білім">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
