--- a/links.html
+++ b/links.html
@@ -64,7 +64,7 @@
 				<div class="header__wrap">
 					<div class="header__left">
 						<a href="./" class="header__logo">
-							<div class="header__logo-pic"><img src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-19/s150x150/76875187_439920826914475_1495386447144812544_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_ohc=yxrXIz9A7coAX8-dluz&oh=65a10eeff87e0cb20285ee56d1229211&oe=5E958FCC" alt="😁 Арманшыл Саят"></div>
+							<div class="header__logo-pic"><img src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-19/s150x150/76875187_439920826914475_1495386447144812544_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_ohc=iuVK8QzobhQAX8JoPdQ&oh=292eddc11d2c6bacf5dad900fd7035e6&oe=5E958FCC" alt="😁 Арманшыл Саят"></div>
 							<div class="header__logo-txt">sayatahmethan_</div>
 						</a>
 						<div class="header__title">😁 Арманшыл Саят</div>
@@ -227,6 +227,15 @@
 										<div class="stories__slide-pic" style="background-image: url(./img/og/sәttіlіk.png);"></div>
 										<div class="stories__slide-txt" style="		color: #243154;
 ">сәттілік</div>
+									</a>
+								</div>
+							</div>
+							<div class="swiper-slide">
+								<div class="stories__slide" title="kommentkaz0003">
+									<a href="./tags/./kommentkaz0003.html">
+										<div class="stories__slide-pic" style="background-image: url(./img/og/kommentkaz0003.png);"></div>
+										<div class="stories__slide-txt" style="		color: #243154;
+">kommentkaz0003</div>
 									</a>
 								</div>
 							</div>
@@ -403,9 +412,9 @@ color: #C6BB73;
 								<a href="./posts/./xx-өz-өmіrіңdі-қiyndatpa.html" class="article-more__item">
 									<div class="article-more__item-pic">
 										<div class="article-more__item-pic-blind">
-											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>182</span>
+											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>183</span>
 										</div>
-										<img class="js-now-lazy" src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/81327250_1101761173508482_7031988878103105573_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=110&_nc_ohc=prL9TQKTpFAAX8N2BVy&oh=58097f02ac82664c91ad1ec869083e27&oe=5E95DF8E" alt="😏 Өз өміріңді қиындатпа!">
+										<img class="js-now-lazy" src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/81327250_1101761173508482_7031988878103105573_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=110&_nc_ohc=wTDhYDWTy0wAX_MFYNo&oh=93d2b9119dd8918c4bd9ffb2c9a3e961&oe=5E95DF8E" alt="😏 Өз өміріңді қиындатпа!">
 									</div>
 									<div class="article-more__item-name" style="
 		color: #243154;
@@ -414,9 +423,9 @@ color: #C6BB73;
 								<a href="./posts/./xx-zharnama-zhіbermey-xx-tap-1.html" class="article-more__item">
 									<div class="article-more__item-pic">
 										<div class="article-more__item-pic-blind">
-											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>179</span>
+											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>180</span>
 										</div>
-										<img class="js-now-lazy" src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-15/e35/82697574_2488574724803465_3332618556511582612_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_cat=105&_nc_ohc=KfQDLJzx5i0AX9klKnZ&oh=2962dba78318afff3cd073f030385108&oe=5E93F071" alt="💰 Жарнама жібермей 🍋 тап!">
+										<img class="js-now-lazy" src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-15/e35/82697574_2488574724803465_3332618556511582612_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_cat=105&_nc_ohc=tzQjHnYhVD0AX95fkbq&oh=444f72ade096c00c9fd0fb32661086e5&oe=5E93F071" alt="💰 Жарнама жібермей 🍋 тап!">
 									</div>
 									<div class="article-more__item-name" style="
 		color: #243154;
@@ -425,9 +434,9 @@ color: #C6BB73;
 								<a href="./posts/./xx-x2020x-zhyly-zhetken-zhetіstіkterіm.html" class="article-more__item">
 									<div class="article-more__item-pic">
 										<div class="article-more__item-pic-blind">
-											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>161</span>
+											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>162</span>
 										</div>
-										<img class="js-now-lazy" src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/78813973_817282122053881_3899741372767422860_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=101&_nc_ohc=DHjLHS3io34AX_Cmajz&oh=76d7eaf8dcf47d3351c6a538f6172c8c&oe=5E93ADF6" alt="😊 «2020» жылы жеткен жетістіктерім">
+										<img class="js-now-lazy" src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/78813973_817282122053881_3899741372767422860_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=101&_nc_ohc=NiWh2FRn_osAX_EuZ2V&oh=dd05c86859cdce3b8ce0568828b8f093&oe=5E93ADF6" alt="😊 «2020» жылы жеткен жетістіктерім">
 									</div>
 									<div class="article-more__item-name" style="
 		color: #243154;
@@ -436,9 +445,9 @@ color: #C6BB73;
 								<a href="./posts/./arman---maқsat---іs--әreket--.html" class="article-more__item">
 									<div class="article-more__item-pic">
 										<div class="article-more__item-pic-blind">
-											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>157</span>
+											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>158</span>
 										</div>
-										<img class="js-now-lazy" src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-15/e35/75284446_193327011825233_3477503653942516291_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_cat=105&_nc_ohc=_y7LyBzzsK0AX_JoYBy&oh=0db44bcdda4256d4626a171e3835d81d&oe=5E97BFD7" alt="АРМАН-> МАҚСАТ-> ІС- ӘРЕКЕТ->">
+										<img class="js-now-lazy" src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-15/e35/75284446_193327011825233_3477503653942516291_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_cat=105&_nc_ohc=mW5mnD0oCqgAX-fILK9&oh=4ad7a16d60eded023d23ac5395e6ac37&oe=5E97BFD7" alt="АРМАН-> МАҚСАТ-> ІС- ӘРЕКЕТ->">
 									</div>
 									<div class="article-more__item-name" style="
 		color: #243154;
@@ -447,9 +456,9 @@ color: #C6BB73;
 								<a href="./posts/./xx-post-saluғa-uaқyt-zhoқ.html" class="article-more__item">
 									<div class="article-more__item-pic">
 										<div class="article-more__item-pic-blind">
-											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>151</span>
+											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>152</span>
 										</div>
-										<img class="js-now-lazy" src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/77401446_778145799273103_7373557858853546984_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=107&_nc_ohc=FpiGnWkbcxAAX-J71oc&oh=26822c76b726832b0c5496f66ef9f130&oe=5E8FCF3C" alt="⚠️ Пост салуға уақыт жоқ!">
+										<img class="js-now-lazy" src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/77401446_778145799273103_7373557858853546984_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=107&_nc_ohc=c0PK-aw-fm4AX_sJyCE&oh=84362fc456e12316d584f40daf2a99d8&oe=5E8FCF3C" alt="⚠️ Пост салуға уақыт жоқ!">
 									</div>
 									<div class="article-more__item-name" style="
 		color: #243154;
@@ -458,7 +467,7 @@ color: #C6BB73;
 								<a href="./posts/./xx-zharnama-zhіbermey-xx-tap-2.html" class="article-more__item">
 									<div class="article-more__item-pic">
 										<div class="article-more__item-pic-blind">
-											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>146</span>
+											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>147</span>
 										</div>
 										<img class="js-now-lazy" src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/82344041_472286830346589_2121484091507824806_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=109&_nc_ohc=mTDl0vecWBIAX8U81yo&oh=f14313fc67faa0d4ba124d0d8f5036fb&oe=5E8DDC81" alt="🤑 Жарнама жібермей 🍋 тап!">
 									</div>
@@ -469,9 +478,9 @@ color: #C6BB73;
 								<a href="./posts/./xx-қayyrly-kүn-қalayyқx-mұnda.html" class="article-more__item">
 									<div class="article-more__item-pic">
 										<div class="article-more__item-pic-blind">
-											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>143</span>
+											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>144</span>
 										</div>
-										<img class="js-now-lazy" src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/82234340_108761900658007_8952337626418518331_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=107&_nc_ohc=Gnl0ZZ1X99AAX8CA5-W&oh=bd0ff3447aa0f7b8c10e369be1cf4c68&oe=5E904F1F" alt="👋 Қайырлы күн Қалайық, Мұнда">
+										<img class="js-now-lazy" src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/82234340_108761900658007_8952337626418518331_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=107&_nc_ohc=IeMpcjfud1YAX-WXe-z&oh=e13e026a32342175301a0766ace8ffd1&oe=5E904F1F" alt="👋 Қайырлы күн Қалайық, Мұнда">
 									</div>
 									<div class="article-more__item-name" style="
 		color: #243154;
@@ -480,7 +489,7 @@ color: #C6BB73;
 								<a href="./posts/./xx-zharnama-zhіbermey-xx-tap.html" class="article-more__item">
 									<div class="article-more__item-pic">
 										<div class="article-more__item-pic-blind">
-											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>142</span>
+											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>143</span>
 										</div>
 										<img class="js-now-lazy" src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/82491276_594100181151505_1238381754611812493_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=101&_nc_ohc=6OYpVnRJ3XgAX8y0vh8&oh=6cee64b3244b37b45e65fb1657de6305&oe=5E8E643E" alt="😮 Жарнама жібермей 🍋 тап!">
 									</div>
