--- a/links.html
+++ b/links.html
@@ -9,8 +9,8 @@
     <script async src="https://use.fontawesome.com/d758daec41.js"></script>   
 	<link rel="stylesheet" href="css/style.css"/>
     
-    <meta name="description" content="құпия үйсату сұрақ баста крыша білім kуaныш сыйлық ктlike бизnes">
-    <meta name="keywords" content="құпия үйсату сұрақ баста крыша білім kуaныш сыйлық ктlike бизnes" />
+    <meta name="description" content="құпия үйсату сұрақ крыша білім baаkыт kуaныш сыйлық ктlike бизnes">
+    <meta name="keywords" content="құпия үйсату сұрақ крыша білім baаkыт kуaныш сыйлық ктlike бизnes" />
     
     <link rel="apple-touch-icon" sizes="57x57" href="img/favicon/apple-icon-57x57.png">
     <link rel="apple-touch-icon" sizes="60x60" href="img/favicon/apple-icon-60x60.png">
@@ -39,7 +39,7 @@
     <meta property="og:image:width" content="150"/>
     <meta property="og:image:height" content="150"/>
     <meta property="og:title" content="😁 Арманшыл Саят" />
-    <meta property="og:description" content="құпия үйсату сұрақ баста крыша білім kуaныш сыйлық ктlike бизnes" />
+    <meta property="og:description" content="құпия үйсату сұрақ крыша білім baаkыт kуaныш сыйлық ктlike бизnes" />
     <meta property="og:locale" content="Ru-ru" />
     <meta property="og:site_name" content="sayatahmethan_" />
 
@@ -159,15 +159,6 @@
 								</div>
 							</div>
 							<div class="swiper-slide">
-								<div class="stories__slide" title="ktбақыт">
-									<a href="./tags/./ktbaқyt.html">
-										<div class="stories__slide-pic" style="background-image: url(./img/og/ktbaқyt.png);"></div>
-										<div class="stories__slide-txt" style="		color: #243154;
-">ktбақыт</div>
-									</a>
-								</div>
-							</div>
-							<div class="swiper-slide">
 								<div class="stories__slide" title="комenttime">
 									<a href="./tags/./komenttime.html">
 										<div class="stories__slide-pic" style="background-image: url(./img/og/komenttime.png);"></div>
@@ -182,6 +173,15 @@
 										<div class="stories__slide-pic" style="background-image: url(./img/og/kuntamasha2701.png);"></div>
 										<div class="stories__slide-txt" style="		color: #243154;
 ">кунтамаша2701</div>
+									</a>
+								</div>
+							</div>
+							<div class="swiper-slide">
+								<div class="stories__slide" title="ktбақыт">
+									<a href="./tags/./ktbaқyt.html">
+										<div class="stories__slide-pic" style="background-image: url(./img/og/ktbaқyt.png);"></div>
+										<div class="stories__slide-txt" style="		color: #243154;
+">ktбақыт</div>
 									</a>
 								</div>
 							</div>
@@ -222,6 +222,15 @@
 								</div>
 							</div>
 							<div class="swiper-slide">
+								<div class="stories__slide" title="baаkыт">
+									<a href="./tags/./baakyt.html">
+										<div class="stories__slide-pic" style="background-image: url(./img/og/baakyt.png);"></div>
+										<div class="stories__slide-txt" style="		color: #243154;
+">baаkыт</div>
+									</a>
+								</div>
+							</div>
+							<div class="swiper-slide">
 								<div class="stories__slide" title="kommentkaz0003">
 									<a href="./tags/./kommentkaz0003.html">
 										<div class="stories__slide-pic" style="background-image: url(./img/og/kommentkaz0003.png);"></div>
@@ -231,29 +240,11 @@
 								</div>
 							</div>
 							<div class="swiper-slide">
-								<div class="stories__slide" title="баста">
-									<a href="./tags/./basta.html">
-										<div class="stories__slide-pic" style="background-image: url(./img/og/basta.png);"></div>
-										<div class="stories__slide-txt" style="		color: #243154;
-">баста</div>
-									</a>
-								</div>
-							</div>
-							<div class="swiper-slide">
 								<div class="stories__slide" title="kуaныш">
 									<a href="./tags/./kuanysh.html">
 										<div class="stories__slide-pic" style="background-image: url(./img/og/kuanysh.png);"></div>
 										<div class="stories__slide-txt" style="		color: #243154;
 ">kуaныш</div>
-									</a>
-								</div>
-							</div>
-							<div class="swiper-slide">
-								<div class="stories__slide" title="втоmnсvv">
-									<a href="./tags/./vtomnsvv.html">
-										<div class="stories__slide-pic" style="background-image: url(./img/og/vtomnsvv.png);"></div>
-										<div class="stories__slide-txt" style="		color: #243154;
-">втоmnсvv</div>
 									</a>
 								</div>
 							</div>
@@ -429,7 +420,7 @@ color: #C6BB73;
 										<div class="article-more__item-pic-blind">
 											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>159</span>
 										</div>
-										<img class="js-now-lazy" src="https://scontent-frx5-1.cdninstagram.com/v/t51.2885-15/e35/75284446_193327011825233_3477503653942516291_n.jpg?_nc_ht=scontent-frx5-1.cdninstagram.com&_nc_cat=105&_nc_ohc=5HStxcI_N0sAX9xVIUq&oh=b204cd12b74a5a035f038e05345b25d1&oe=5EA4EED7" alt="АРМАН-> МАҚСАТ-> ІС- ӘРЕКЕТ->">
+										<img class="js-now-lazy" src="https://scontent-frx5-1.cdninstagram.com/v/t51.2885-15/e35/75284446_193327011825233_3477503653942516291_n.jpg?_nc_ht=scontent-frx5-1.cdninstagram.com&_nc_cat=105&_nc_ohc=5HStxcI_N0sAX9xVIUq&oh=9205139d39a77ac4cb4db1ff89053d73&oe=5EB21DD7" alt="АРМАН-> МАҚСАТ-> ІС- ӘРЕКЕТ->">
 									</div>
 									<div class="article-more__item-name" style="
 		color: #243154;
@@ -440,7 +431,7 @@ color: #C6BB73;
 										<div class="article-more__item-pic-blind">
 											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>149</span>
 										</div>
-										<img class="js-now-lazy" src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-15/e35/82344041_472286830346589_2121484091507824806_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_cat=109&_nc_ohc=OhpbukX99BsAX8PaqKS&oh=8af41b798c7aa0089b33167b3b025473&oe=5EA83A81" alt="🤑 Жарнама жібермей 🍋 тап!">
+										<img class="js-now-lazy" src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-15/e35/82344041_472286830346589_2121484091507824806_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_cat=109&_nc_ohc=OyoZEnyEkPIAX-3GCAV&oh=9ec3cc159b2f5762ad7f8d508a65324a&oe=5EA83A81" alt="🤑 Жарнама жібермей 🍋 тап!">
 									</div>
 									<div class="article-more__item-name" style="
 		color: #243154;
@@ -449,9 +440,9 @@ color: #C6BB73;
 								<a href="./posts/./xx-zharnama-zhіbermey-xx-tap.html" class="article-more__item">
 									<div class="article-more__item-pic">
 										<div class="article-more__item-pic-blind">
-											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>146</span>
+											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>147</span>
 										</div>
-										<img class="js-now-lazy" src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-15/e35/82491276_594100181151505_1238381754611812493_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_cat=101&_nc_ohc=T2FYPjMn8vAAX_88YLJ&oh=209b61230dfcbcb4ed6b87f7b29afd40&oe=5EA8C23E" alt="😮 Жарнама жібермей 🍋 тап!">
+										<img class="js-now-lazy" src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-15/e35/82491276_594100181151505_1238381754611812493_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_cat=101&_nc_ohc=YfQ7MVBgNg8AX-35___&oh=b024e6100e7fc8a6cc0c17b9dc98f499&oe=5EA8C23E" alt="😮 Жарнама жібермей 🍋 тап!">
 									</div>
 									<div class="article-more__item-name" style="
 		color: #243154;
@@ -462,7 +453,7 @@ color: #C6BB73;
 										<div class="article-more__item-pic-blind">
 											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>146</span>
 										</div>
-										<img class="js-now-lazy" src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-15/e35/82234340_108761900658007_8952337626418518331_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_cat=107&_nc_ohc=jMQVX0UyNdQAX-Rmhym&oh=f4f582cfb6609d878706c380750298fd&oe=5E9C4DE1" alt="👋 Қайырлы күн Қалайық, Мұнда">
+										<img class="js-now-lazy" src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-15/e35/82234340_108761900658007_8952337626418518331_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_cat=107&_nc_ohc=jMQVX0UyNdQAX-Rmhym&oh=f01f26f06ca3f23b62cbe4e777284535&oe=5EA04261" alt="👋 Қайырлы күн Қалайық, Мұнда">
 									</div>
 									<div class="article-more__item-name" style="
 		color: #243154;
@@ -473,7 +464,7 @@ color: #C6BB73;
 										<div class="article-more__item-pic-blind">
 											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>116</span>
 										</div>
-										<img class="js-now-lazy" src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/84029257_650884998982587_8857777222872158278_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_cat=103&_nc_ohc=XtqpD5ii9N8AX_cC7tt&oh=a6475fc4204a3388397e1460d6ac0b7b&oe=5EA5A86A" alt="🧐Мен өмірге не үшін келдім?">
+										<img class="js-now-lazy" src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/84029257_650884998982587_8857777222872158278_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_cat=103&_nc_ohc=XtqpD5ii9N8AX_cC7tt&oh=18fa68daab7911a137e805d39ce40ef2&oe=5E9D5E16" alt="🧐Мен өмірге не үшін келдім?">
 									</div>
 									<div class="article-more__item-name" style="
 		color: #243154;
