--- a/stories.html
+++ b/stories.html
@@ -105,9 +105,19 @@
 				<div class="items-main" id="js-items-main">
 					<div class="items-item">
 						<label class="items-item__wrap items-item__check">
+							<input id="virusx-dollar-taғy-basқa" type="checkbox" />
+							<div class="items-item__pic">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-frx5-1.cdninstagram.com/v/t51.2885-15/e35/90218126_350197805894518_6530716064130220800_n.jpg?_nc_ht=scontent-frx5-1.cdninstagram.com&_nc_cat=110&_nc_ohc=faPeNPSVlQsAX-CI-oC&oh=06164b9d40a993e298fd1118b2c3f627&oe=5E9E6605" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="Вирус, доллар тағы басқа">
+								<ul class="items-item__taglist">
+								</ul>
+							</div>
+						</label>
+					</div>
+					<div class="items-item">
+						<label class="items-item__wrap items-item__check">
 							<input id="xx-mұnay-әlemdіk-baғasynyң" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-15/e35/87606770_2358201254471805_2782798178909391867_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_cat=109&_nc_ohc=RLJwUn5CR7gAX8i886H&oh=83e26f10ac27a2914ab440d169951772&oe=5E9CCE0D" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="🤯 Мұнай әлемдік бағасының">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-15/e35/87606770_2358201254471805_2782798178909391867_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_cat=109&_nc_ohc=r7NnKHU6y_YAX-ByVNv&oh=66ce91da64874c7838f592985bd43527&oe=5EA0C28D" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="🤯 Мұнай әлемдік бағасының">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -117,7 +127,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="xxөzіңe-senіmsіzdіk-tanytsaң" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-15/e35/84419609_660387121392825_6849093406712899036_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_cat=109&_nc_ohc=LaIJJfv9LjwAX9v2k5v&oh=0018be0da3097732ddbacfca8b5c7fd0&oe=5EA80615" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="☝️Өзіңе сенімсіздік танытсаң">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-15/e35/84419609_660387121392825_6849093406712899036_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_cat=109&_nc_ohc=LaIJJfv9LjwAX9v2k5v&oh=51d069d166a8f2e4570f3f8321b71bc3&oe=5EA0466B" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="☝️Өзіңе сенімсіздік танытсаң">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -127,7 +137,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="xx-әtteң-osy-sұraқty-16mln" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-15/e35/84057952_1473130616193499_2684157898017634379_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_cat=107&_nc_ohc=hLbfVe4DOHoAX8kcNf0&oh=5713bfea850311f2b42a132b1e138791&oe=5E9CAEDB" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="😬 Әттең осы сұрақты 16млн">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-15/e35/84057952_1473130616193499_2684157898017634379_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_cat=107&_nc_ohc=BA1cFKTrAk8AX-TFJeY&oh=6f7c16120c7bca0be4bab298d861f06d&oe=5EA0A35B" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="😬 Әттең осы сұрақты 16млн">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -147,7 +157,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="xx-zharnama-zhіbermey-xx-tap" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-15/e35/82491276_594100181151505_1238381754611812493_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_cat=101&_nc_ohc=T2FYPjMn8vAAX_88YLJ&oh=209b61230dfcbcb4ed6b87f7b29afd40&oe=5EA8C23E" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="😮 Жарнама жібермей 🍋 тап!">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-15/e35/82491276_594100181151505_1238381754611812493_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_cat=101&_nc_ohc=YfQ7MVBgNg8AX-35___&oh=b024e6100e7fc8a6cc0c17b9dc98f499&oe=5EA8C23E" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="😮 Жарнама жібермей 🍋 тап!">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -167,7 +177,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="xx-zharnama-zhіbermey-xx-tap-2" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-15/e35/82344041_472286830346589_2121484091507824806_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_cat=109&_nc_ohc=OhpbukX99BsAX8PaqKS&oh=8af41b798c7aa0089b33167b3b025473&oe=5EA83A81" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="🤑 Жарнама жібермей 🍋 тап!">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-15/e35/82344041_472286830346589_2121484091507824806_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_cat=109&_nc_ohc=OyoZEnyEkPIAX-3GCAV&oh=9ec3cc159b2f5762ad7f8d508a65324a&oe=5EA83A81" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="🤑 Жарнама жібермей 🍋 тап!">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -177,7 +187,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="xxmen-өmіrge-ne-үshіn-keldіm" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/84029257_650884998982587_8857777222872158278_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_cat=103&_nc_ohc=XtqpD5ii9N8AX_cC7tt&oh=a6475fc4204a3388397e1460d6ac0b7b&oe=5EA5A86A" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="🧐Мен өмірге не үшін келдім?">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/84029257_650884998982587_8857777222872158278_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_cat=103&_nc_ohc=XtqpD5ii9N8AX_cC7tt&oh=18fa68daab7911a137e805d39ce40ef2&oe=5E9D5E16" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="🧐Мен өмірге не үшін келдім?">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -187,7 +197,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="xx-қayyrly-kүn-қalayyқx-mұnda" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-15/e35/82234340_108761900658007_8952337626418518331_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_cat=107&_nc_ohc=jMQVX0UyNdQAX-Rmhym&oh=f4f582cfb6609d878706c380750298fd&oe=5E9C4DE1" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="👋 Қайырлы күн Қалайық, Мұнда">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-15/e35/82234340_108761900658007_8952337626418518331_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_cat=107&_nc_ohc=jMQVX0UyNdQAX-Rmhym&oh=f01f26f06ca3f23b62cbe4e777284535&oe=5EA04261" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="👋 Қайырлы күн Қалайық, Мұнда">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -205,19 +215,9 @@
 					</div>
 					<div class="items-item">
 						<label class="items-item__wrap items-item__check">
-							<input id="al-mіne-tegіn-үyren-de-basta" type="checkbox" />
-							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-15/e35/73387385_2628140830557121_864822904081207135_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_cat=101&_nc_ohc=2k8nfTm1i2IAX9C93Za&oh=b7a875bdc20e32a68e23f8b7100ed79c&oe=5E7648EE" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="Ал міне тегін үйрен де Баста!">
-								<ul class="items-item__taglist">
-								</ul>
-							</div>
-						</label>
-					</div>
-					<div class="items-item">
-						<label class="items-item__wrap items-item__check">
 							<input id="arman---maқsat---іs--әreket--" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-frx5-1.cdninstagram.com/v/t51.2885-15/e35/75284446_193327011825233_3477503653942516291_n.jpg?_nc_ht=scontent-frx5-1.cdninstagram.com&_nc_cat=105&_nc_ohc=5HStxcI_N0sAX9xVIUq&oh=b204cd12b74a5a035f038e05345b25d1&oe=5EA4EED7" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="АРМАН-> МАҚСАТ-> ІС- ӘРЕКЕТ->">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-frx5-1.cdninstagram.com/v/t51.2885-15/e35/75284446_193327011825233_3477503653942516291_n.jpg?_nc_ht=scontent-frx5-1.cdninstagram.com&_nc_cat=105&_nc_ohc=5HStxcI_N0sAX9xVIUq&oh=9205139d39a77ac4cb4db1ff89053d73&oe=5EB21DD7" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="АРМАН-> МАҚСАТ-> ІС- ӘРЕКЕТ->">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -227,7 +227,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="xx-post-saluғa-uaқyt-zhoқ" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-15/e35/77401446_778145799273103_7373557858853546984_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_cat=107&_nc_ohc=oqGkzoXpJZcAX_eg3d7&oh=1e823e69a959ef55f52ea6bf469ffe74&oe=5E9CFE3C" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="⚠️ Пост салуға уақыт жоқ!">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-15/e35/77401446_778145799273103_7373557858853546984_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_cat=107&_nc_ohc=oqGkzoXpJZcAX_eg3d7&oh=c0b25fa9b93e0907ca27457c22066640&oe=5EAA2D3C" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="⚠️ Пост салуға уақыт жоқ!">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -237,7 +237,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="zhaңalyқtyң-kөkesіx-tөmengі" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/75586246_166073588054248_6776733106266702904_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=104&_nc_ohc=Ze1lmXueD6wAX-vQyPo&oh=d59100f967e9f5e0c00f6dd29a803455&oe=5E9C0B68" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="Жаңалықтың көкесі, төменгі">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/75586246_166073588054248_6776733106266702904_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=104&_nc_ohc=Ze1lmXueD6wAX-vQyPo&oh=3b52ec8f0667955c27b60105c081af36&oe=5EA93A68" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="Жаңалықтың көкесі, төменгі">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -247,7 +247,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="x-үy-satudaғy-3x3-құpiyasy" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-frx5-1.cdninstagram.com/v/t51.2885-15/e35/75148256_157308765365063_6723412256602712267_n.jpg?_nc_ht=scontent-frx5-1.cdninstagram.com&_nc_cat=111&_nc_ohc=5DibxR6Et2kAX_Mb4Lo&oh=33b63b09ed6831e9fa526b796f91c187&oe=5E9F50EA" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="✊ Үй сатудағы 3/3 құпиясы">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-frx5-1.cdninstagram.com/v/t51.2885-15/e35/75148256_157308765365063_6723412256602712267_n.jpg?_nc_ht=scontent-frx5-1.cdninstagram.com&_nc_cat=111&_nc_ohc=AthvAk_kXUoAX-y0L4h&oh=80061126d373113d0e12277860193e61&oe=5E9D1E16" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="✊ Үй сатудағы 3/3 құпиясы">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -257,7 +257,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="xxүy-satudyң-3x2-құpiyasy" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/71851985_408537836745398_1783606332378097787_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=102&_nc_ohc=uWKz6j-cTTwAX_ULTof&oh=6afa9ec88d110baaa2309ebb521b533b&oe=5EA5E12E" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="☝️Үй сатудың 3/2 құпиясы">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/71851985_408537836745398_1783606332378097787_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=102&_nc_ohc=uWKz6j-cTTwAX_ULTof&oh=12f320fdc066b8629e0fdd43ca47ccc5&oe=5E9E76D2" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="☝️Үй сатудың 3/2 құпиясы">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -277,7 +277,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="xx-biznesmenge-kerektі-bіlіm" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-frx5-1.cdninstagram.com/v/t51.2885-15/e35/71187969_442627039709879_197456136209767097_n.jpg?_nc_ht=scontent-frx5-1.cdninstagram.com&_nc_cat=111&_nc_ohc=0KLCgmvGFy8AX9Dh-y7&oh=cc64ed0b5638ad7ff9c2121dcad90f67&oe=5E9BBBD3" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="📚 Бизнесменге керекті білім">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-frx5-1.cdninstagram.com/v/t51.2885-15/e35/71187969_442627039709879_197456136209767097_n.jpg?_nc_ht=scontent-frx5-1.cdninstagram.com&_nc_cat=111&_nc_ohc=0KLCgmvGFy8AX9Dh-y7&oh=a5ae547032165170c4e6d6bf533b1d97&oe=5E9FB053" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="📚 Бизнесменге керекті білім">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
